[gd_scene load_steps=24 format=2]

[ext_resource path="res://vehicle.gd" type="Script" id=1]
[ext_resource path="res://tracktor.obj" type="ArrayMesh" id=2]
[ext_resource path="res://SAVE_20210408_1858541.png" type="Texture" id=3]
[ext_resource path="res://SAVE_20210408_1858546.png" type="Texture" id=4]
[ext_resource path="res://SAVE_20210408_1858545.png" type="Texture" id=5]
[ext_resource path="res://SAVE_20210408_18585469.png" type="Texture" id=6]
[ext_resource path="res://camera.png" type="Texture" id=7]
[ext_resource path="res://00930.ogg" type="AudioStream" id=8]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.5

[sub_resource type="CylinderMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="CylinderMesh" id=5]

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="SpatialMaterial" id=8]
albedo_color = Color( 0, 0.768627, 0.827451, 1 )

[sub_resource type="SpatialMaterial" id=9]
albedo_color = Color( 0.670588, 0.670588, 0.670588, 1 )

[sub_resource type="SpatialMaterial" id=10]
albedo_color = Color( 0.0705882, 0.490196, 0.419608, 1 )

[sub_resource type="SpatialMaterial" id=11]
albedo_color = Color( 0.372549, 0.372549, 0.372549, 1 )

[sub_resource type="SpatialMaterial" id=12]
albedo_color = Color( 1, 0.937255, 0, 1 )

[sub_resource type="SpatialMaterial" id=13]
albedo_color = Color( 1, 0.984314, 0, 1 )

[sub_resource type="SpatialMaterial" id=14]
albedo_color = Color( 0.227451, 0.227451, 0.227451, 1 )

[sub_resource type="BoxShape" id=15]
extents = Vector3( 0.477039, 0.475233, 1.15379 )

[node name="CarBase" type="Spatial"]
_import_path = NodePath(".")
__meta__ = {
"__editor_plugin_screen__": "3D"
}

[node name="Body" type="VehicleBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00169557, 0.222867, -0.0955184 )
physics_material_override = SubResource( 1 )
engine_force = 40.0
script = ExtResource( 1 )

[node name="Wheel3" type="VehicleWheel" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.380639, 0.241082, 0.931085 )
use_as_traction = true
use_as_steering = true
wheel_roll_influence = 0.4
wheel_radius = 0.25
wheel_friction_slip = 1.0
suspension_travel = 2.0
suspension_stiffness = 40.0
damping_compression = 0.88

[node name="MeshInstance" type="MeshInstance" parent="Body/Wheel3"]
transform = Transform( -1.32354e-08, 0.0812381, -1.32354e-08, 0, -3.98857e-08, -0.244817, -0.244817, -3.98857e-08, 6.49821e-15, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="Wheel1" type="VehicleWheel" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.355869, 0.241082, 0.931085 )
use_as_traction = true
use_as_steering = true
wheel_roll_influence = 0.4
wheel_radius = 0.25
wheel_friction_slip = 1.0
suspension_travel = 2.0
suspension_stiffness = 40.0
damping_compression = 0.88

[node name="MeshInstance" type="MeshInstance" parent="Body/Wheel1"]
transform = Transform( -1.32354e-08, 0.0812381, -1.32354e-08, 0, -3.98857e-08, -0.244817, -0.244817, -3.98857e-08, 6.49821e-15, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 4 )

[node name="Wheel4" type="VehicleWheel" parent="Body"]
transform = Transform( 1.97485, 0, 0, 0, 1.97485, 0, 0, 0, 1.97485, -0.455028, 0.203197, -0.630769 )
use_as_traction = true
wheel_roll_influence = 0.4
wheel_radius = 0.25
wheel_friction_slip = 1.0
suspension_travel = 2.0
suspension_stiffness = 40.0
damping_compression = 0.88

[node name="koleso" type="MeshInstance" parent="Body/Wheel4"]
transform = Transform( -1.15625e-08, 0.0709703, -1.15625e-08, 0, -3.81029e-08, -0.233874, -0.233874, -3.81029e-08, 6.20776e-15, 0, 0, 0 )
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="Wheel2" type="VehicleWheel" parent="Body"]
transform = Transform( 1.97485, 0, 0, 0, 1.97485, 0, 0, 0, 1.97485, 0.47271, 0.203197, -0.630769 )
use_as_traction = true
wheel_roll_influence = 0.4
wheel_radius = 0.25
wheel_friction_slip = 1.0
suspension_travel = 2.0
suspension_stiffness = 40.0
damping_compression = 0.88

[node name="koleso" type="MeshInstance" parent="Body/Wheel2"]
transform = Transform( -1.15625e-08, 0.0709703, -1.15625e-08, 0, -3.81029e-08, -0.233874, -0.233874, -3.81029e-08, 6.20776e-15, 0, 0, 0 )
mesh = SubResource( 5 )
material/0 = SubResource( 7 )

[node name="Body" type="MeshInstance" parent="Body"]
_import_path = NodePath("BODY-vehicle")
transform = Transform( 0.289924, 0, 0, 0, 0.289924, 0, 0, 0, 0.289924, 0, 0.729159, -0.554872 )
mesh = ExtResource( 2 )
material/0 = SubResource( 8 )
material/1 = SubResource( 9 )
material/2 = SubResource( 10 )
material/3 = SubResource( 11 )
material/4 = SubResource( 12 )
material/5 = SubResource( 13 )
material/6 = SubResource( 14 )

[node name="CollisionShape" type="CollisionShape" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.899108, 0.0142903 )
shape = SubResource( 15 )

[node name="go" type="TextureButton" parent="Body"]
anchor_left = 0.906
anchor_top = 0.832
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.255981
margin_top = -0.200012
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="TextureButton" parent="Body"]
anchor_left = 0.808
anchor_top = 0.832
anchor_right = 0.906
anchor_bottom = 0.997
margin_left = 2.60797
margin_top = -0.200012
margin_right = 0.255981
margin_bottom = -0.200012
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="left" type="TouchScreenButton" parent="Body"]
position = Vector2( 3.25989, 475.101 )
scale = Vector2( 0.285503, 0.290989 )
normal = ExtResource( 3 )
action = "turn_left"

[node name="right" type="TouchScreenButton" parent="Body"]
position = Vector2( 167.678, 468.594 )
scale = Vector2( 0.309428, 0.30618 )
normal = ExtResource( 6 )
action = "turn_right"

[node name="Camera" type="Camera" parent="Body"]
transform = Transform( -1, -1.95399e-14, -3.25842e-07, -2.91071e-08, 0.996002, 0.0893289, 3.24539e-07, 0.0893289, -0.996002, 0, 2.22027, -3.86282 )

[node name="Camera2" type="Camera" parent="Body"]
transform = Transform( 0.881814, -0.0421272, 0.469712, -2.91071e-08, 0.996002, 0.0893289, -0.471597, -0.0787715, 0.878289, 1.65364, 0.821893, 3.00385 )

[node name="camera_button" type="TextureButton" parent="Body"]
anchor_left = 0.926
anchor_top = 0.467
anchor_right = 1.0
anchor_bottom = 0.58
margin_left = -0.22406
margin_top = -0.200012
margin_bottom = -3.05176e-05
texture_normal = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="camera_button2" type="TextureButton" parent="Body"]
visible = false
anchor_left = 0.926
anchor_top = 0.467
anchor_right = 1.0
anchor_bottom = 0.58
margin_left = -0.22406
margin_top = -0.200012
margin_bottom = -3.05176e-05
texture_normal = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Body"]
stream = ExtResource( 8 )
autoplay = true
